--- a/assets/style/pages/book-details.css
+++ b/assets/style/pages/book-details.css
@@ -13,10 +13,40 @@
 }
 .book-details img {
     max-width: 200px;
-    display: block;
+}
+
+.img-container {
+    position: relative;
     margin: auto;
 }
 
 .book-details h1,h2 {
     text-transform: capitalize;
+}
+
+.on-sale {
+    color: var(--clr2bg);
+    background-color: var(--clr1bg);
+    border-radius: 10px;
+    padding: 5px;
+    font-style: italic;
+    rotate: 25deg;
+    text-transform: uppercase;
+    position: absolute;
+    top: 0;
+    right: -20px;
+    font-size: 1.2em;
+}
+
+.book-details span {
+    font-style: italic;
+    font-weight: 800;
+}
+
+.red {
+    color: red;
+}
+
+.green {
+    color: green;
 }
