--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -28,6 +28,11 @@ a {
     color: unset;
 }
 
+a.active {
+    text-decoration: underline;
+    scale: 1.05;
+}
+
 
 
 /* Dont stretch my Media */
@@ -42,3 +47,4 @@ object {
 .debug * {
     outline: 1px solid gold
 }
+
